:tada: Initialize layout

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,2 +1,8 @@
-@import url(main.css);
+/* FONTS */
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap");
+
 @import url(root.css);
+@import url(main.css);
+
+/* COMPONENTS */
+@import url(components/MainPage.css);
