--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,11 @@
 body {
     margin: 0;
+    font-family: "Inter", sans-serif;
+}
+
+.app {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
