--- a/public/css/components/MainPage.css
+++ b/public/css/components/MainPage.css
@@ -1,6 +1,7 @@
 .main-page {
     width: 50%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     border: solid 1px black;
