--- a/public/css/components/MainPage.css
+++ b/public/css/components/MainPage.css
@@ -1,6 +1,9 @@
 .main-page {
+    min-width: 350px;
     width: 50%;
+    height: 50%;
     display: flex;
+    padding: 50px 0;
     flex-direction: column;
     justify-content: center;
     align-items: center;
