--- a/public/css/services/morpion.css
+++ b/public/css/services/morpion.css
@@ -2,6 +2,7 @@
 }
 
 #morpion-page .game {
+    padding: 20px;
 }
 
 #morpion-page .game .board {
@@ -20,4 +21,5 @@
     background-color: white;
     justify-content: center;
     align-items: center;
+    user-select: none;
 }
