--- a/public/css/components/MainPage.css
+++ b/public/css/components/MainPage.css
@@ -1,11 +1,19 @@
 .main-page {
     min-width: 350px;
     width: 50%;
-    height: 50%;
+    height: 80%;
     display: flex;
     padding: 50px 0;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     border: solid 1px black;
+}
+
+.page-content {
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
