--- a/public/css/modules/morpion.css
+++ b/public/css/modules/morpion.css
@@ -17,8 +17,8 @@
     height: 100px;
     width: 100px;
     font-size: 40px;
-    border: 1px solid black;
-    background-color: white;
+    border: 1px solid var(--black);
+    background-color: var(--white);
     justify-content: center;
     align-items: center;
     user-select: none;
