:sparkles: Collapse Button

--- a/public/css/modules/miniblog.css
+++ b/public/css/modules/miniblog.css
@@ -18,3 +18,9 @@
     height: 30vh;
     overflow-y: scroll;
 }
+
+#miniblog-page .collapse-button {
+    background: none;
+    border: none;
+    color: var(--blue);
+}
