--- a/public/css/modules/miniblog.css
+++ b/public/css/modules/miniblog.css
@@ -17,6 +17,26 @@
 #miniblog-page .posts .post .comments {
     height: 30vh;
     overflow-y: scroll;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    gap: 20px;
+}
+
+#miniblog-page .posts .post .comments .comment {
+    display: flex;
+    flex-direction: column;
+    font-size: 12px;
+    border-left: 2px solid var(--grey);
+    padding-left: 10px;
+}
+
+#miniblog-page .posts .post .comments .comment .comment-title {
+    font-weight: bold;
+}
+
+#miniblog-page .posts .post .comments .comment .comment-title small {
+    color: var(--grey);
 }
 
 #miniblog-page .collapse-button {
